# gijipuro

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
components/: common.py  home.py  search_result.py
styles/: main.css
tests/: test_helpers.py  test_search_result.py
utils/: api_client.py  helpers.py
