[project]
name = "gijipuro"
version = "0.1.0"
description = ""
authors = [
    {name = "mori",email = "morikic@inap-vision.co.jp"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.33,<2.0)",
    "httpx (>=0.27,<0.28)",
    "streamlit-image-select (>=0.6.0,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

